feat: Add real-world improvements for FREE and PREMIUM pipelines - FREE: Enhanced table detection, ID card support, partial export - PREMIUM: Smart processor selection based on document type

--- a/pdf-to-excel-convert.html
+++ b/pdf-to-excel-convert.html
@@ -285,6 +285,7 @@
 <script src="js/pdf-excel-user-type.js" defer></script>
 <script src="js/pdf-excel-analysis.js" defer></script>
 <script src="js/pdf-excel-free-converter.js" defer></script>
+<script src="js/pdf-excel-free-enhancer.js" defer></script>
 <script src="js/pdf-excel-upgrade-popup.js" defer></script>
             <script type="application/ld+json">
     {
