--- a/pdf-to-excel-convert.html
+++ b/pdf-to-excel-convert.html
@@ -364,9 +364,9 @@
 <button class="btn" id="viewIdCardText" style="background: #4361ee; display: none;"><i class="fas fa-eye"></i> View Text</button>
 <button class="btn" id="downloadIdCardTemplate" style="background: #3a0ca3; display: none;"><i class="fas fa-download"></i> Download CSV Template</button>
 <!-- FREE: Basic Excel (Browser-based) -->
-<button class="btn" id="downloadExcelFree" style="background: #4361ee;"><i class="fas fa-file-excel"></i> Download Excel (Basic)</button>
+<button class="btn" id="downloadExcelFree" style="background: #4361ee;"><i class="fas fa-file-excel"></i> Download (Basic)</button>
 <!-- PREMIUM: OCR Excel (Document AI) - Locked for free users -->
-<button class="btn" id="downloadExcelPremium" style="background: #0f9d58; position: relative;" disabled><i class="fas fa-file-excel"></i> Download Excel (OCR / Premium) <i class="fas fa-lock" style="margin-left: 8px; font-size: 12px;"></i></button>
+<button class="btn" id="downloadExcelPremium" style="background: #0f9d58; position: relative;" disabled><i class="fas fa-file-excel"></i> Download Pro Version <i class="fas fa-lock" style="margin-left: 8px; font-size: 12px;"></i></button>
 <!-- Legacy buttons (hidden, kept for backward compatibility) -->
 <button class="btn" id="downloadExcel" style="display: none;"><i class="fas fa-file-excel"></i> Download Excel (Textract)</button>
 <button class="btn" id="downloadExcelDocAI" style="display: none; background: #0f9d58;"><i class="fas fa-file-excel"></i> Download Excel (DocAI)</button>
