fix: Update dynamic button text to Download Pro Version

--- a/pdf-to-excel-convert.html
+++ b/pdf-to-excel-convert.html
@@ -712,7 +712,7 @@
       downloadBtnPremium.style.display = 'inline-flex';
       downloadBtnPremium.style.opacity = '1';
       downloadBtnPremium.style.cursor = 'pointer';
-      downloadBtnPremium.innerHTML = '<i class="fas fa-file-excel"></i> Download Excel (OCR / Premium)';
+      downloadBtnPremium.innerHTML = '<i class="fas fa-file-excel"></i> Download Pro Version';
     }
   }
 
