--- a/pdf-to-excel-convert.html
+++ b/pdf-to-excel-convert.html
@@ -287,6 +287,7 @@
 <script src="js/pdf-excel-analysis.js" defer></script>
 <script src="js/pdf-excel-free-converter.js" defer></script>
 <script src="js/pdf-excel-ilovepdf-layout.js" defer></script>
+<script src="js/pdf-excel-visual-detector.js" defer></script>
 <script src="js/pdf-excel-free-enhancer.js" defer></script>
 <script src="js/pdf-excel-upgrade-popup.js" defer></script>
             <script type="application/ld+json">
