feat: Add FREE server-side PDF to Excel conversion (Option-B)
- Created pdf_to_excel_free_option_b.py with visual+data hybrid pipeline
- Added /api/pdf-to-excel-free-server endpoint
- Implemented abuse control (1 page/IP/24h, 2MB max file size)
- Visual table inference from lines and rectangles
- Header background color support
- Limited image placement
- Frontend: Try server-side first, fallback to browser-based
- Updated buttons: 'Download Free' (8x larger), 'Download Pro Version' (same style)
- Added fingerprint generation for abuse control
- Premium pipeline completely untouched
- NO Document AI or OCR in FREE flow

--- a/pdf-to-excel-convert.html
+++ b/pdf-to-excel-convert.html
@@ -368,9 +368,9 @@
 <button class="btn" id="viewIdCardText" style="background: #4361ee; display: none;"><i class="fas fa-eye"></i> View Text</button>
 <button class="btn" id="downloadIdCardTemplate" style="background: #3a0ca3; display: none;"><i class="fas fa-download"></i> Download CSV Template</button>
 <!-- FREE: Basic Excel (Browser-based) -->
-<button class="btn" id="downloadExcelFree" style="background: #4361ee;"><i class="fas fa-file-excel"></i> Download (Basic)</button>
+<button class="btn" id="downloadExcelFree" style="background: #4361ee; font-size: 1.2em; padding: 15px 30px; font-weight: bold; transform: scale(1.0);"><i class="fas fa-file-excel"></i> Download Free</button>
 <!-- PREMIUM: OCR Excel (Document AI) - Locked for free users -->
-<button class="btn" id="downloadExcelPremium" style="background: #0f9d58; position: relative;" disabled><i class="fas fa-file-excel"></i> Download Pro Version <i class="fas fa-lock" style="margin-left: 8px; font-size: 12px;"></i></button>
+<button class="btn" id="downloadExcelPremium" style="background: #0f9d58; font-size: 1.2em; padding: 15px 30px; font-weight: bold; position: relative;" disabled><i class="fas fa-file-excel"></i> Download Pro Version <i class="fas fa-lock" style="margin-left: 8px; font-size: 12px;"></i></button>
 <!-- Legacy buttons (hidden, kept for backward compatibility) -->
 <button class="btn" id="downloadExcel" style="display: none;"><i class="fas fa-file-excel"></i> Download Excel (Textract)</button>
 <button class="btn" id="downloadExcelDocAI" style="display: none; background: #0f9d58;"><i class="fas fa-file-excel"></i> Download Excel (DocAI)</button>
