--- a/pdf-to-excel-convert.html
+++ b/pdf-to-excel-convert.html
@@ -854,10 +854,14 @@
               const debugResponse = await fetch(`${API_BASE_URL}/api/free-limits/debug`);
               if (debugResponse.ok) {
                 const debugData = await debugResponse.json();
-                console.log('FREE Limits Debug:', debugData.usage_info);
+                console.log('FREE Limits Debug:', JSON.stringify(debugData.usage_info, null, 2));
                 if (debugData.usage_info && debugData.usage_info.is_limit_reached) {
-                  console.warn('Daily limit reached:', debugData.usage_info);
+                  console.warn('⚠️ Daily limit reached:', debugData.usage_info);
+                } else {
+                  console.log('✅ Limits OK:', debugData.usage_info);
                 }
+              } else {
+                console.warn('⚠️ Debug endpoint error:', debugResponse.status);
               }
             } catch (debugError) {
               console.warn('Could not check limits:', debugError);
