--- a/pdf-to-excel-convert.html
+++ b/pdf-to-excel-convert.html
@@ -370,7 +370,7 @@
 <!-- FREE: Basic Excel (Browser-based) -->
 <button class="btn" id="downloadExcelFree" style="background: #4361ee; font-size: 2.4em; padding: 30px 60px; font-weight: bold; transform: scale(1.0); min-width: 300px; min-height: 80px;"><i class="fas fa-file-excel"></i> Download Free</button>
 <!-- PREMIUM: OCR Excel (Document AI) - Locked for free users -->
-<button class="btn" id="downloadExcelPremium" style="background: #0f9d58; font-size: 2.4em; padding: 30px 60px; font-weight: bold; position: relative; min-width: 300px; min-height: 80px;" disabled><i class="fas fa-file-excel"></i> Download Pro Version <i class="fas fa-lock" style="margin-left: 8px; font-size: 12px;"></i></button>
+<button class="btn" id="downloadExcelPremium" style="background: #0f9d58; font-size: 2.4em; padding: 30px 60px; font-weight: bold; position: relative; min-width: 300px; min-height: 80px;" disabled><i class="fas fa-file-excel"></i> Download OCR Pro <i class="fas fa-lock" style="margin-left: 8px; font-size: 12px;"></i></button>
 <!-- Legacy buttons (hidden, kept for backward compatibility) -->
 <button class="btn" id="downloadExcel" style="display: none;"><i class="fas fa-file-excel"></i> Download Excel (Textract)</button>
 <button class="btn" id="downloadExcelDocAI" style="display: none; background: #0f9d58;"><i class="fas fa-file-excel"></i> Download Excel (DocAI)</button>
@@ -716,7 +716,7 @@
       downloadBtnPremium.style.display = 'inline-flex';
       downloadBtnPremium.style.opacity = '1';
       downloadBtnPremium.style.cursor = 'pointer';
-      downloadBtnPremium.innerHTML = '<i class="fas fa-file-excel"></i> Download Pro Version';
+      downloadBtnPremium.innerHTML = '<i class="fas fa-file-excel"></i> Download OCR Pro';
     }
   }
 
