feat: Add scanned PDF detection with upgrade popup + Free vs Premium tips
- Scanned PDFs now show upgrade popup instead of blank output
- Updated Tips section with Free vs Premium features
- Updated Workflow section with Free vs Premium details
- Better user experience for OCR-required PDFs

--- a/pdf-to-excel-convert.html
+++ b/pdf-to-excel-convert.html
@@ -381,6 +381,8 @@
 <div class="panel option-card" style="gap:10px">
 <h3 class="section-title"><i class="fas fa-lightbulb"></i> Tips</h3>
 <ul style="list-style:none;display:grid;gap:8px;color:var(--muted);font-size:0.93rem;padding-left:0">
+<li><i class="fas fa-check-circle" style="color:var(--primary);"></i> <strong>FREE:</strong> Text-based PDFs, basic tables, Unicode support (Hindi, Urdu, etc.)</li>
+<li><i class="fas fa-check-circle" style="color:var(--success);"></i> <strong>PREMIUM:</strong> Scanned PDFs, OCR-powered conversion, complex tables, bank statements, invoices</li>
 <li><i class="fas fa-check-circle" style="color:var(--primary);"></i> Multi-language text is preserved by SheetJS.</li>
 <li><i class="fas fa-check-circle" style="color:var(--primary);"></i> Selected pages export into separate sheets.</li>
 <li><i class="fas fa-check-circle" style="color:var(--primary);"></i> Use Reload if you need to re-open a recent file.</li>
