--- a/pdf-to-excel.html
+++ b/pdf-to-excel.html
@@ -508,6 +508,8 @@
 <ul>
 <li><i class="fas fa-check-circle"></i> Review thumbnails before exporting</li>
 <li><i class="fas fa-check-circle"></i> Pick specific pages or ranges</li>
+<li><i class="fas fa-check-circle"></i> <strong>FREE:</strong> Convert text-based PDFs instantly (no OCR)</li>
+<li><i class="fas fa-check-circle" style="color:var(--success);"></i> <strong>PREMIUM:</strong> OCR-powered conversion for scanned PDFs, invoices, bank statements with enterprise-level accuracy</li>
 <li><i class="fas fa-check-circle"></i> Download clean XLSX files instantly</li>
 </ul>
 </div>
