Fix: Set premiumCard to display:none initially, show only after free conversion

--- a/frontend/pdf-to-word-converter.html
+++ b/frontend/pdf-to-word-converter.html
@@ -455,7 +455,7 @@
                             </a>
                         </div>
                         
-                        <div class="download-card" id="premiumCard" style="display: block; margin-top: 12px; border: 2px solid var(--primary); background: linear-gradient(135deg, rgba(67, 97, 238, 0.05), rgba(67, 97, 238, 0.02));">
+                        <div class="download-card" id="premiumCard" style="display: none; margin-top: 12px; border: 2px solid var(--primary); background: linear-gradient(135deg, rgba(67, 97, 238, 0.05), rgba(67, 97, 238, 0.02));">
                             <h3 style="font-size: 1rem; font-weight: 700; color: var(--primary); margin-bottom: 8px;">
                                 <i class="fas fa-crown"></i> OCR Pro Version
                             </h3>
